made basic layout

--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>People entered:</h1>
+    <p id="number">0</p>
+    <button>Increase</button>
+    <button>Save</button>
+    <p>Latest entries</p>
+    <script src="index.js"></script>
 </body>
 </html>
