--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400;900&family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <h1>People entered:</h1>
     <p id="number">0</p>
-    <button>Increase</button>
-    <button>Save</button>
-    <p>Latest entries</p>
+    <h2>Latest entries</h2>
+    <p id="prev-values"></p>
+    <button onclick="increase()">Increase</button>
+    <button class='blue' onclick="save(), reset()">Save</button>
+    <button class="red" onclick="reset()">Reset</button>
+    <button class="red" onclick="del()">Delete</button>
     <script src="index.js"></script>
 </body>
 </html>
