--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -13,9 +13,7 @@
 <body>
     <input type="text" id="text-input" />
     <button onclick="add()">Add url</button>
-    <ul id="link-list">
-
-    </ul>
+    <ul id="link-list"></ul>
     <script src="index.js"></script>
 </body>
 </html>
