--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -12,7 +12,9 @@
 </head>
 <body>
     <input type="text" id="text-input" />
-    <button onclick="add()">Add url</button>
+    <button id="add-btn">Add url</button>
+    <button id="tab-btn">Save tab</button>
+    <button id="delete-btn">Delete all</button>
     <ul id="link-list"></ul>
     <script src="index.js"></script>
 </body>
