developed movement, borders and enemy behaviour

--- a/Project 7 - Pacman/index.html
+++ b/Project 7 - Pacman/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Pacman</h1>
+    <h2>Score: <span class="score">0</span></h2>
     <div class="grid"></div>
     <button>Start / Restart</button>
     <script src="index.js"></script>
