--- a/Project 7 - Pacman/index.html
+++ b/Project 7 - Pacman/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <title>Pacman</title>
 </head>
 <body>
     <h1>Pacman</h1>
     <h2>Score: <span class="score">0</span></h2>
     <div class="grid"></div>
-    <button>Start / Restart</button>
+    <button onclick="restartGame()">Start / Restart</button>
     <script src="index.js"></script>
 </body>
 </html>
