finished the redesign

--- a/UI/Earnings/index.html
+++ b/UI/Earnings/index.html
@@ -11,7 +11,7 @@
     <title>Earnings</title>
 </head>
 <body>
-    <nav>
+    <nav id="nav">
         <div class="inner-wrapper">
             <svg viewBox="0 0 32 37" id="exit-btn">
                 <path id="back" d="M15.9,4.492a3,3,0,0,1,5.194,0L34.4,27.5A3,3,0,0,1,31.8,32H5.2a3,3,0,0,1-2.6-4.5Z" transform="translate(0 37) rotate(-90)" fill="#fff" />
@@ -21,10 +21,10 @@
         </div>
         <ul>
             <li class="selected"><a href="#">Dashboard</a></li>
-            <li class="selected"><a href="#">Settings</a></li>
-            <li class="selected"><a href="#">Profile</a></li>
-            <li class="selected"><a href="#">Reset Access</a></li>
-            <li class="selected"><a href="#">Contact</a></li>
+            <li class=""><a href="#">Settings</a></li>
+            <li class=""><a href="#">Profile</a></li>
+            <li class=""><a href="#">Reset Access</a></li>
+            <li class=""><a href="#">Contact</a></li>
         </ul>
     </nav>
 
@@ -72,7 +72,11 @@
                         <p>$5,201.00</p>
                     </li>
                     <li>
-                        <h3>Quarterly</h3>
+                        <h3>Yearly</h3>
+                        <p>$5,201.00</p>
+                    </li>
+                    <li>
+                        <h3>Monthly</h3>
                         <p>$5,201.00</p>
                     </li>
                 </ul>
