hamburger menu completed

--- a/UI/Portfolio/index.html
+++ b/UI/Portfolio/index.html
@@ -18,7 +18,7 @@
             <img src="img/devjane.png" alt="picture of me">
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
-            <i class="fa-solid fa-bars"></i>
+            <div class="hamburger"></div>
         </button>
         <nav class="nav">
             <ul class="nav__list">
@@ -78,7 +78,7 @@
     <!-- My Work -->
     <section class="my-work" id="work">
         <h2 class="section__title">My work</h2>
-        <p class="section__subtitle"></p>
+        <p class="section__subtitle section__subtitle--work">A selection of my range of work</p>
 
         <div class="portfolio">
             <a href="#" class="portfolio__item">
