--- a/UI/Portfolio/index.html
+++ b/UI/Portfolio/index.html
@@ -18,7 +18,7 @@
             <img src="img/devjane.png" alt="picture of me">
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
-            <div class="hamburger"></div>
+            <span class="hamburger"></span>
         </button>
         <nav class="nav">
             <ul class="nav__list">
